--- a/client/src/app/announcements/announcement-card/announcement-card.component.html
+++ b/client/src/app/announcements/announcement-card/announcement-card.component.html
@@ -1,1 +1,32 @@
-<p>announcement-card works!</p>
+<div class="card mb-4">
+  <div class="card-image-wrapper">
+      <img src="{{announcement.photoUrl || './assets/user.png'}}" alt="{{announcement.name}}" class="card-img-top">
+      <ul class="list-inline member-icons animate text-center">
+          <li class="list-inline-item">
+              <button routerLink='/' class="btn btn-primary">
+                  <i class="fa fa-user"></i>
+              </button>
+          </li>
+          <li class="list-inline-item">
+              <button class="btn btn-primary">
+                  <i class="fa fa-heart"></i>
+              </button>
+          </li>
+          <li class="list-inline-item">
+              <button
+                  routerLink='/'
+                  class="btn btn-primary">
+                      <i class="fa fa-envelope"></i>
+              </button>
+          </li>
+      </ul>
+  </div>
+  <div class="card-body p-1">
+      <h6 class="card-title text-center mb-1">
+          {{announcement.user.userName}}, {{announcement.address.city}}
+      </h6>
+      <p class="card-text text-muted text-center">
+          {{announcement.address.street}}
+      </p>
+  </div>
+</div>
