--- a/client/src/app/announcements/announcements.component.html
+++ b/client/src/app/announcements/announcements.component.html
@@ -1,7 +1,6 @@
-<!-- <div class="row">
-  <div class="col-sm-4" *ngFor="let announcement of announcements | async">
+<div class="row">
+  <div class="col-sm-4" *ngFor="let announcement of announcements">
     <gs-announcement-card [announcement]="announcement"></gs-announcement-card>
   </div>
-</div> -->
+</div>
 
-<div>hjojojojoj</div>
