--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <gs-nav></gs-nav>
 
-<div style="margin-top: 100px;">
+<div class="container" style="margin-top: 100px;">
   <router-outlet></router-outlet>
 </div>
