Update Announcemet view in Angular

--- a/client/src/app/announcements/announcements.component.html
+++ b/client/src/app/announcements/announcements.component.html
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class="col-sm-4" *ngFor="let announcement of announcements">
+<div class="">
+  <div class="" *ngFor="let announcement of announcements">
     <gs-announcement-card [announcement]="announcement"></gs-announcement-card>
   </div>
 </div>
