--- a/client/src/app/core/nav/nav.component.html
+++ b/client/src/app/core/nav/nav.component.html
@@ -6,7 +6,7 @@
     <li>
       <a routerLink="/" routerLinkActive="router-link-active">Twoje ogłoszenia</a>
       <ul>
-        <li><a routerLink="/" routerLinkActive="router-link-active">Dodaj ogłoszenie</a></li>
+        <li><a routerLink="/announcements-add" routerLinkActive="router-link-active">Dodaj ogłoszenie</a></li>
       </ul>
     </li>
   </ng-container>
