--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,2 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 
+.btn-blue-style{
+  height: 40px;
+  width: 200px;
+  border: 1px solid;
+  background: white;
+  border-radius: 25px;
+  font-size: 18px;
+  font-weight: 700;
+  color: rgb(3, 163, 255);
+}
+
+.btn-blue-style:hover{
+  background: rgb(3, 163, 255);
+  color: white;
+  transition: .5s;
+}
