--- a/client/src/app/core/forms/date-picker/date-picker.component.html
+++ b/client/src/app/core/forms/date-picker/date-picker.component.html
@@ -9,5 +9,5 @@
       [bsConfig]='bsConfig'
       [minDate]='minDate'
   >
-  <div *ngIf="ngControl.control.errors?.['required']" class="invalid-feedback">{{label}} is required</div>
+  <div *ngIf="ngControl.control.errors?.['required']" class="invalid-feedback">{{label}} jest wymagany</div>
 </div>
