--- a/client/src/app/announcements/announcements.component.html
+++ b/client/src/app/announcements/announcements.component.html
@@ -15,10 +15,11 @@
   </form>
 </div>
 
-
 <div class="">
   <div class="" *ngFor="let announcement of announcements">
     <gs-announcement-card [announcement]="announcement"></gs-announcement-card>
   </div>
 </div>
+
+<div>Tu będzie paginacja</div>
 
