--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -16,3 +16,6 @@
   color: white;
   transition: .5s;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
