--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,7 @@
 <gs-nav></gs-nav>
 
-<div class="container" style="margin-top: 100px; margin-bottom: 100px;">
+<div class="container" style="margin-top: 100px;">
   <router-outlet></router-outlet>
 </div>
 
-<gs-footer></gs-footer>
+<!-- <gs-footer></gs-footer> -->
