--- a/client/src/app/announcements/announcement-add/announcement-add.component.html
+++ b/client/src/app/announcements/announcement-add/announcement-add.component.html
@@ -31,13 +31,16 @@
       </div>
 
 
-
       <div class="form-group text-center">
         <button [disabled]="!registerForm.valid" class="btn btn-success me-2" type="submit">Dodaj</button>
         <button class="btn btn-danger me-2" routerLink="/" routerLinkActive="router-link-active"
           type="button">Anuluj</button>
       </div>
     </form>
-
+  </div>
+  <div class="col-6">
+    <gs-announcement-photos ></gs-announcement-photos>
   </div>
 </div>
+
+
