--- a/client/src/app/announcements/announcement-photos/announcement-photos.component.html
+++ b/client/src/app/announcements/announcement-photos/announcement-photos.component.html
@@ -1,45 +1,63 @@
 <div class="row">
 
-  <div class="">
-      <h3>Wybierz zdjęcia</h3>
-      <input type="file" ng2FileSelect [uploader]="uploader" />
+  <div class="col-2" *ngFor="let photo of announcement?.photos">
+    <img src="{{photo.url}}" alt="{{photo.url}}" class="img-thumbnail p-1">
+    <div class="text-center">
+      <button class="btn btn-sm btn-danger" (click)="deletePhoto(photo.id)"><i class="fa fa-trash"></i></button>
+    </div>
+  </div>
+
+  <div class="row mt-3">
+      <input type="file" id="file-upload" ng2FileSelect [uploader]="uploader" [disabled]="fileInput"/>
+      <label for="file-upload" class="custom-file-upload" (click)="firstSaveForm()">
+        <img class="fileSelectImg" src="/assets/fileSelection.png" alt="File selection">
+        Wczytaj zdjęcie
+      </label>
+    </div>
   </div>
 
   <div class="" style="margin-bottom: 40px; margin-top: 40px;">
 
-      <h3>Kolejka zdjęć</h3>
-      <p>Długość kolejki: {{ uploader?.queue?.length }}</p>
+    <h3>Kolejka zdjęć</h3>
+    <p>Długość kolejki: {{ uploader?.queue?.length }}</p>
 
 
-      <table class="table">
-          <thead>
-          <tr>
-              <th>Nazwa</th>
-              <th>Rozmiar</th>
-              <th>Akcja</th>
-          </tr>
-          </thead>
-          <tbody>
-          <tr *ngFor="let item of uploader.queue">
-              <td><strong>{{ item?.file?.name }}</strong></td>
-              <td *ngIf="uploader.options.isHTML5" nowrap>{{ item?.file?.size/1024/1024 | number:'.2' }} MB</td>
-              <td nowrap>
-                  <button type="button" class="btn btn-danger btn-xs"
-                          (click)="item.remove()">
-                      <span class="glyphicon glyphicon-trash"></span> Usuń
-                  </button>
-              </td>
-          </tr>
-          </tbody>
-      </table>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Nazwa</th>
+          <th>Rozmiar</th>
+          <th>Akcja</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of uploader.queue">
+          <td><strong>{{ item?.file?.name }}</strong></td>
+          <td *ngIf="uploader.options.isHTML5" nowrap>{{ item?.file?.size/1024/1024 | number:'.2' }} MB</td>
+          <td nowrap>
+            <button type="button" class="btn btn-danger btn-xs" (click)="item.remove()">
+              <span class="glyphicon glyphicon-trash"></span> Usuń
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
 
-      <div>
-          <button type="button" class="btn btn-danger btn-s"
-                  (click)="uploader.clearQueue()" [disabled]="!uploader.queue.length">
-              <span class="glyphicon glyphicon-trash"></span> Usuń wszystkie
-          </button>
+    <div>
+      <div *ngIf="uploader?.queue?.length">
+        Pasek ładowania:
+        <div class="progress mb-2">
+          <div class="progress-bar" role="progressbar" [ngStyle]="{ 'width': uploader.progress + '%' }"></div>
+        </div>
       </div>
+      <button type="button" class="btn btn-success btn-s me-2" (click)="uploader.uploadAll()"
+        [disabled]="!uploader.getNotUploadedItems().length">
+        <span class="fa fa-upload"></span> Upload all
+      </button>
+      <button type="button" class="btn btn-danger btn-s" (click)="uploader.clearQueue()"
+        [disabled]="!uploader.queue.length">
+        <span class="glyphicon glyphicon-trash"></span> Usuń wszystkie
+      </button>
+    </div>
 
   </div>
-
-</div>
