--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,6 @@
 <gs-nav></gs-nav>
 
-<div class="container" style="margin-top: 100px;">
+<div class="container" style="margin-top: 100px">
   <router-outlet></router-outlet>
 </div>
 
