Adding remove announcement to view

--- a/client/src/app/announcements/announcement-manage-card/announcement-manage-card.component.html
+++ b/client/src/app/announcements/announcement-manage-card/announcement-manage-card.component.html
@@ -20,6 +20,7 @@
     </div>
   </div>
   <button routerLink="/user-announcements/{{announcement.id}}/edit" class="btn-blue-style btn-own-style">Edytuj</button>
+  <button (click)="deleteAnnouncement(announcement)" class="btn-red-style btn-own-style">Usuń</button>
 </div>
 
 
