--- a/client/src/app/announcements/user-announcements/user-announcements.component.html
+++ b/client/src/app/announcements/user-announcements/user-announcements.component.html
@@ -1,5 +1,5 @@
-<div class="">
+<div *ngIf="announcements">
   <div class="" *ngFor="let announcement of announcements">
-    <gs-announcement-manage-card [announcement]="announcement"></gs-announcement-manage-card>
+    <gs-announcement-manage-card [announcement]="announcement" (parentDeleteAnnouncement)="deleteAnnouncement(announcement)"></gs-announcement-manage-card>
   </div>
 </div>
