Update add and edit view announcement

--- a/client/src/app/announcements/announcement-add/announcement-add.component.html
+++ b/client/src/app/announcements/announcement-add/announcement-add.component.html
@@ -1,3 +1,4 @@
-
-<h2 class="text-center text-primary mb-5">Dodaj nowe ogłoszenie</h2>
-<gs-announcement-form></gs-announcement-form>
+<div *ngIf="userOfAccount">
+  <h2 class="text-center text-primary mb-5">Dodaj nowe ogłoszenie</h2>
+  <gs-announcement-form [userOfAccount]="userOfAccount"></gs-announcement-form>
+</div>
