--- a/client/src/app/announcements/announcement-photos/announcement-photos.component.css
+++ b/client/src/app/announcements/announcement-photos/announcement-photos.component.css
@@ -8,6 +8,7 @@ input[type="file"] {
 }
 
 .custom-file-upload {
+  transition: .5s;
   border: 1px solid #ccc;
   display: inline-block;
   padding: 6px 12px;
@@ -19,9 +20,10 @@ input[type="file"] {
 
 .custom-file-upload:hover{
   transition: .5s;
-  background-color: rgb(0, 170, 9);
+  background-color: rgb(3, 163, 255);
+  color: white;
+  border-color: rgba(0, 238, 255, 0.384);
 }
-
 .fileSelectImg{
   max-width: 60px;
   min-width: 20px;
