Update nav and footer of page

--- a/client/src/app/announcements/announcement-photos/announcement-photos.component.html
+++ b/client/src/app/announcements/announcement-photos/announcement-photos.component.html
@@ -47,7 +47,7 @@
     </div>
     <button type="button" class="btn btn-success btn-s me-2" (click)="uploader.uploadAll()"
       [disabled]="!uploader.getNotUploadedItems().length">
-      <span class="fa fa-upload"></span> Upload all
+      <span class="fa fa-upload"></span> Prześlij wszystkie
     </button>
     <button type="button" class="btn btn-danger btn-s" (click)="uploader.clearQueue()"
       [disabled]="!uploader.queue.length">
