--- a/client/src/app/announcements/announcements.component.html
+++ b/client/src/app/announcements/announcements.component.html
@@ -22,5 +22,14 @@
     </div>
   </div>
 
-  <div>Tu będzie paginacja</div>
+  <div class="d-flex justify-content-center" *ngIf="pagination">
+    <pagination
+        [boundaryLinks]="true"
+        [totalItems]="77"
+        previousText="&lsaquo;"
+        nextText="&rsaquo;"
+        firstText="&laquo;"
+        lastText="&raquo;">
+    </pagination>
+  </div>
 </div>
