--- a/client/src/app/core/forms/text-input-area/text-input-area.component.html
+++ b/client/src/app/core/forms/text-input-area/text-input-area.component.html
@@ -7,10 +7,10 @@
   </textarea>
   <div *ngIf="ngControl.control.errors?.['required']" class="invalid-feedback"> {{label}} jest wymagane </div>
   <div *ngIf="ngControl.control.errors?.['minlength']" class="invalid-feedback">
-      {{label}} musi mieć przynajmniej {{ngControl.control.errors.minlength['requiredLength']}}
+      {{label}} musi mieć przynajmniej {{ngControl.control.errors.minlength['requiredLength']}} znaków
   </div>
   <div *ngIf="ngControl.control.errors?.['maxlength']" class="invalid-feedback">
-      {{label}} nie może mieć więcej niż {{ngControl.control.errors.maxlength['requiredLength']}}
+      {{label}} nie może mieć więcej niż {{ngControl.control.errors.maxlength['requiredLength']}} znaków
   </div>
   <div *ngIf="ngControl.control.errors?.['isMatching']" class="invalid-feedback">
       Hasła się nie zgadzają!
