--- a/client/src/app/announcements/announcements.component.html
+++ b/client/src/app/announcements/announcements.component.html
@@ -25,7 +25,10 @@
   <div class="d-flex justify-content-center" *ngIf="pagination">
     <pagination
         [boundaryLinks]="true"
-        [totalItems]="77"
+        [totalItems]="pagination.totalItems"
+        [itemsPerPage]="pagination.itemsPerPage"
+        [(ngModel)]="pagination.currentPage"
+        (pageChanged)="pageChanged($event)"
         previousText="&lsaquo;"
         nextText="&rsaquo;"
         firstText="&laquo;"
