--- a/client/src/app/core/footer/footer.component.css
+++ b/client/src/app/core/footer/footer.component.css
@@ -7,6 +7,6 @@
   background-color: rgb(108, 177, 233);
   color: white;
   text-align: center;
-  padding-top: 10px;
+  padding: 10px 0;;
   z-index: 3;
 }
