--- a/client/src/app/core/footer/footer.component.html
+++ b/client/src/app/core/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="footer">
-  <p>©2022 Patryk Staroń, Aplikacja powstała w ramach Pracy Inżynierskiej</p>
+  ©2022 Patryk Staroń, Aplikacja powstała w ramach Pracy Inżynierskiej
 </div>
