--- a/client/src/app/announcements/announcements.component.html
+++ b/client/src/app/announcements/announcements.component.html
@@ -1,19 +1,44 @@
 <div *ngIf="announcements">
-  <div class="text-center mt-3">
-    <h2>Liczba wyników - {{pagination?.totalItems}}</h2>
-  </div>
 
-  <div class="container mt-3">
+  <div class="container filter-panel">
+    <h2>Filtry</h2>
     <form #form="ngForm" class="row g-3 align-items-center mb-3" (ngSubmit)="loadAnnouncements()" autocomplete="off">
         <div class="col-auto">
-            <button class="btn btn-primary" type="submit">Szukaj</button>
+            <label>Tytuł ogłoszenia</label>
+            <input type="text" class="form-control" style="width: 200px" name="minAge"
+                [(ngModel)]="userParams.minAge">
         </div>
 
         <div class="col-auto">
-            <button (click)="resetFilters()" class="btn btn-info">Reset</button>
+          <label>Miasto</label>
+          <input type="text" class="form-control" style="width: 200px" name="maxAge"
+              [(ngModel)]="userParams.maxAge">
         </div>
 
-    </form>
+        <div class="col-auto">
+          <label>Województwo</label>
+          <input type="text" class="form-control" style="width: 200px" name="maxAge"
+              [(ngModel)]="userParams.maxAge">
+        </div>
+
+        <div class="col-auto">
+          <label>Sortuj: </label>
+          <select [(ngModel)]="userParams.gender" name="gender" style="width: 130px" class="form-control ms-1">
+              <option *ngFor="let sort of sortList" [value]="sort.value">
+                  {{sort.display}}
+              </option>
+          </select>
+        </div>
+
+        <div>
+            <button class="btn btn-primary me-2" type="submit">Filtruj</button>
+            <button (click)="resetFilters()" class="btn btn-info">Resetuj</button>
+        </div>
+      </form>
+  </div>
+
+  <div class="text-center mb-5">
+    <h2>Liczba wyników - {{pagination?.totalItems}}</h2>
   </div>
 
   <div class="">
