--- a/client/src/app/announcements/announcement-form/announcement-form.component.html
+++ b/client/src/app/announcements/announcement-form/announcement-form.component.html
@@ -26,7 +26,7 @@
       <div formGroupName="address">
         <gs-text-input formControlName="street" [label]='"Ulica i nr domu/mieszkania"'></gs-text-input>
         <gs-text-input formControlName="city" [label]='"Miejscowość"'></gs-text-input>
-        <gs-text-input formControlName="postalCode" [label]='"Kod pocztowy"'></gs-text-input>
+        <gs-text-input formControlName="province" [label]='"Województwo"'></gs-text-input>
       </div>
 
 
