--- a/client/src/app/announcements/announcement-card/announcement-card.component.css
+++ b/client/src/app/announcements/announcement-card/announcement-card.component.css
@@ -1,8 +1,10 @@
 .announcement-container{
   border-bottom: 1px solid;
   padding: 10px;
-  margin: 10px;
+  margin: 20px;
   padding-bottom: 20px;
+  background-color: white;
+  border-radius: 0.4cm;
 }
 
 .announcement-card{
@@ -30,3 +32,10 @@
   margin-left: 10px;
 }
 
+label{
+  font-weight: bold;
+}
+
+.info-row{
+  padding: 2px;
+}
