--- a/client/src/app/announcements/announcement-form/announcement-form.component.html
+++ b/client/src/app/announcements/announcement-form/announcement-form.component.html
@@ -31,7 +31,7 @@
 
 
       <div class="form-group text-center">
-        <button [disabled]="!registerForm.valid" id="btn-submit" class="btn btn-success me-2" type="submit" onclick="this.blur();">{{btnSubmitText}}</button>
+        <button [disabled]="!registerForm.valid" id="btn-submit" class="btn btn-success me-2" type="submit" onclick="this.blur()">{{btnSubmitText}}</button>
       </div>
     </form>
   </div>
