--- a/client/src/app/announcements/announcements.component.css
+++ b/client/src/app/announcements/announcements.component.css
@@ -1,6 +1,7 @@
 .filter-panel{
-  background-color: rgb(238, 238, 238);
+  background-color: white;
   padding: 20px 20px 10px 20px;
   margin-bottom: 20px;
   border-radius:0.4cm;
+  border-bottom: 1px solid;
 }
