--- a/client/src/app/announcements/user-announcements/user-announcements.component.html
+++ b/client/src/app/announcements/user-announcements/user-announcements.component.html
@@ -1,5 +1,11 @@
 <div *ngIf="announcements">
-  <div class="" *ngFor="let announcement of announcements">
-    <gs-announcement-manage-card [announcement]="announcement" (parentDeleteAnnouncement)="deleteAnnouncement(announcement)"></gs-announcement-manage-card>
+  <div *ngIf="announcements?.length <=0">
+    <h2>Nie masz jeszcze żadnych ogłoszeń.</h2>
+  </div>
+
+  <div>
+    <div class="" *ngFor="let announcement of announcements">
+      <gs-announcement-manage-card [announcement]="announcement" (parentDeleteAnnouncement)="deleteAnnouncement(announcement)"></gs-announcement-manage-card>
+    </div>
   </div>
 </div>
