--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -4,8 +4,10 @@
 
 <gs-nav></gs-nav>
 
-<div class="container router-outlet" style="margin-top: 100px; margin-bottom: 100px;">
+<div class="container" style="margin-top: 100px; margin-bottom: 100px;">
   <router-outlet></router-outlet>
 </div>
 
 <gs-footer></gs-footer>
+
+
