--- a/client/src/app/announcements/announcement-details/announcement-details.component.html
+++ b/client/src/app/announcements/announcement-details/announcement-details.component.html
@@ -1,1 +1,4 @@
-<p>announcement-details works!</p>
+<div class="container">
+  <ngx-gallery [options]="galleryOptions" [images]="galleryImages" class="ngx-gallery"></ngx-gallery>
+</div>
+
