--- a/client/src/app/announcements/announcement-details/announcement-details.component.css
+++ b/client/src/app/announcements/announcement-details/announcement-details.component.css
@@ -1,1 +1,46 @@
-.ngx-gallery { display: inline-block; margin-bottom: 20px; }
+
+.gallery-container{
+  background-color: white;
+  width: 544px;
+  height: 540px;
+  border-radius: 6px;
+  border-bottom: 1px solid;
+  margin: 10px;
+}
+
+.ngx-gallery {
+  display: inline-block;
+  margin: 20px 10px;
+}
+
+.announcement-details, .description{
+  background-color: white;
+  border-radius: 6px;
+  border-bottom: 1px solid;
+  margin: 10px;
+  padding: 20px;
+  min-width: 500px
+}
+
+.description{
+  max-width: 1064px;
+}
+
+label{
+  font-weight: bold;
+}
+
+.info-row{
+  padding: 2px;
+}
+
+.title{
+  margin-bottom: 30px;
+}
+
+.no-photos{
+  text-align: center;
+  vertical-align: middle;
+  line-height: 540px;
+}
+
