Update comments component in view

--- a/client/src/app/announcements/announcement-comments/announcement-comments.component.css
+++ b/client/src/app/announcements/announcement-comments/announcement-comments.component.css
@@ -9,6 +9,7 @@
 }
 
 .chat li {
+  min-height: 80px;
   margin-bottom: 10px;
   padding-bottom: 10px;
   border-bottom: 1px dotted #B3A9A9;
@@ -16,4 +17,13 @@
 
 .rounded-circle {
   max-height: 50px;
+}
+
+.senderName{
+  text-align: center;
+}
+
+.row-message{
+  display: flex;
+  justify-content: space-between;
 }
