Adding comment deletion in component

--- a/client/src/app/announcements/announcement-card/announcement-card.component.html
+++ b/client/src/app/announcements/announcement-card/announcement-card.component.html
@@ -36,7 +36,7 @@
       </div>
     </div>
     <div class="photo">
-      <img src="{{announcement.photoUrl || './assets/user.png'}}" alt="{{announcement.name}}" class="card-img-top">
+      <img src="{{announcement.photoUrl || './assets/no_photo.jpg'}}" alt="{{announcement.name}}" class="card-img-top">
     </div>
   </div>
   <button class="btn-blue-style btn-own-style" routerLink="{{announcement.id}}/details">Szczegóły</button>
