--- a/client/src/app/announcements/announcement-comments/announcement-comments.component.html
+++ b/client/src/app/announcements/announcement-comments/announcement-comments.component.html
@@ -25,7 +25,8 @@
               <p>{{comment.content}}</p>
             </div>
             <div>
-              <img class="rounded-circle" src="{{'./assets/user.png'}}" alt="foto">
+              <img class="rounded-circle mb-1 centre-object" src="{{'./assets/user.png'}}" alt="foto">
+              <button class="btn btn-sm btn-danger centre-object" (click)="deleteComment(comment)"><i class="fa fa-trash"></i></button>
             </div>
           </div>
         </li>
