--- a/client/src/app/announcements/announcement-details/announcement-details.component.html
+++ b/client/src/app/announcements/announcement-details/announcement-details.component.html
@@ -43,13 +43,13 @@
       </ng-container>
     </div>
 
-    <div class="description">
+    <div class="col-4 description">
       <h5>
         Opis
       </h5>
       <a>{{announcement.description}}</a>
     </div>
-    <div class="col-6">
+    <div class="col-4 comments">
       <gs-announcement-comments [announcement]="announcement"></gs-announcement-comments>
     </div>
   </div>
