--- a/client/src/app/announcements/announcement-manage-card/announcement-manage-card.component.html
+++ b/client/src/app/announcements/announcement-manage-card/announcement-manage-card.component.html
@@ -16,7 +16,7 @@
       <p>Adres: {{announcement.address.street}}, {{announcement.address.province}} {{announcement.address.city}}</p>
     </div>
     <div class="photo">
-      <img src="{{announcement.photoUrl || './assets/user.png'}}" alt="{{announcement.name}}" class="card-img-top">
+      <img src="{{announcement.photoUrl || './assets/no_photo.jpg'}}" alt="{{announcement.name}}" class="card-img-top">
     </div>
   </div>
   <button routerLink="/user-announcements/{{announcement.id}}/edit" class="btn-blue-style btn-own-style">Edytuj</button>
