--- a/client/src/app/announcements/announcement-comments/announcement-comments.component.css
+++ b/client/src/app/announcements/announcement-comments/announcement-comments.component.css
@@ -28,11 +28,12 @@
   justify-content: space-between;
 }
 
-.own-footer{
-  border-bottom: 1px solid;
-  background-color: white;
-}
-
 .organizer{
   color: rgb(253, 136, 1);
+}
+
+.centre-object{
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
