--- a/client/src/app/core/login/login.component.html
+++ b/client/src/app/core/login/login.component.html
@@ -1,17 +1,15 @@
 <div class="login-page">
   <h1>Logowanie</h1>
-  <form #loginForm="ngForm" (ngSubmit)="login()" autocomplete="off">
+  <form [formGroup]="loginForm" autocomplete="off" (ngSubmit)="loginForm.valid && login()" autocomplete="off">
     <div class="txt-field">
-      <input name="username" [(ngModel)]="model.username" class="" type="text" required>
-      <span></span>
-      <label>Login</label>
+      <gs-text-input [formControl]='loginForm.controls["userName"]' [label]='"Nazwa użytkownika"'></gs-text-input>
     </div>
     <div class="txt-field">
-      <input name=password [(ngModel)]="model.password" type="password" required>
-      <span></span>
-      <label>Hasło</label>
+      <gs-text-input [formControl]='loginForm.controls["password"]' [label]='"Hasło"' [type]='"password"'></gs-text-input>
     </div>
-    <input type="submit" value="Zaloguj">
+    <button type="submit" [disabled]="!loginForm.valid">
+      Zaloguj
+    </button>
     <div class="signup-link">
       Nie masz konta? <a routerLink="/register">Rejestracja</a>
     </div>
