--- a/client/src/app/core/register/register.component.html
+++ b/client/src/app/core/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-  <div class="col-4">
+  <div class="register-form">
     <form [formGroup]="registerForm" (ngSubmit)="registerForm.valid && register()" autocomplete="off">
       <h2 class="text-center text-primary">Rejestracja</h2>
       <hr>
@@ -28,7 +28,7 @@
         </ul>
       </div>
 
-      <div class="form-group text-center">
+      <div class="form-group text-center mt-4">
         <button [disabled]="!registerForm.valid" class="btn btn-success me-2" type="submit">Rejestruj</button>
         <button class="btn btn-danger me-2" routerLink="/" routerLinkActive="router-link-active" type="button">Wyjdz</button>
       </div>
