--- a/client/src/app/announcements/announcement-manage-card/announcement-manage-card.component.css
+++ b/client/src/app/announcements/announcement-manage-card/announcement-manage-card.component.css
@@ -1,7 +1,7 @@
 .announcement-container{
   border-bottom: 1px solid;
   padding: 10px;
-  margin: 10px;
+  margin: 20px;
   padding-bottom: 20px;
   background-color: white;
   border-radius: 0.4cm;
@@ -17,7 +17,7 @@
 }
 
 .description{
-  width: 250px;
+  min-width: 400px;
   padding: 5px;
 }
 
@@ -30,7 +30,12 @@
 
 .btn-own-style{
   margin-left: 10px;
-  margin-bottom: 5px;
 }
 
+label{
+  font-weight: bold;
+}
 
+.info-row{
+  padding: 2px;
+}
