--- a/client/src/app/announcements/announcement-manage-card/announcement-manage-card.component.html
+++ b/client/src/app/announcements/announcement-manage-card/announcement-manage-card.component.html
@@ -1,19 +1,34 @@
 <div class="announcement-container">
   <div class="announcement-card">
     <div class="description">
-        <h6 class="">
+        <h3 class="">
             {{announcement.name}}
-        </h6>
-        <p>{{announcement.description}}</p>
+        </h3>
+        <div class="info-row">
+          <label>Start:</label>
+          <a> {{announcement.startDate | date:'d/M/yy, h:mm a' }}</a>
+        </div>
+        <div class="info-row">
+          <label>Czas trwania:</label>
+          <a> {{announcement.duration}} godziny</a>
+        </div>
     </div>
     <div class="description">
-      <h6 class="">
+      <h5 class="">
           Informacje o wyprzedaży
-      </h6>
-      <p>Organizator: {{announcement.user.firstName}} {{announcement.user.lastName}}</p>
-      <p>Start: {{announcement.startDate | date:'d/M/yy, h:mm a' }}</p>
-      <p>Czas trwania: {{announcement.duration}} godziny</p>
-      <p>Adres: {{announcement.address.street}}, {{announcement.address.province}} {{announcement.address.city}}</p>
+      </h5>
+      <div class="info-row">
+        <label>Adres:</label>
+        <a> {{announcement.address.street}}</a>
+      </div>
+      <div class="info-row">
+        <label>Miasto:</label>
+        <a> {{announcement.address.city}}</a>
+      </div>
+      <div class="info-row">
+        <label>Województwo:</label>
+        <a> {{announcement.address.province}}</a>
+      </div>
     </div>
     <div class="photo">
       <img src="{{announcement.photoUrl || './assets/no_photo.jpg'}}" alt="{{announcement.name}}" class="card-img-top">
@@ -22,5 +37,4 @@
   <button routerLink="/user-announcements/{{announcement.id}}/edit" class="btn-blue-style btn-own-style">Edytuj</button>
   <button (click)="deleteAnnouncement(announcement)" class="btn-red-style btn-own-style">Usuń</button>
 </div>
-
 
