--- a/client/src/app/core/register/register.component.html
+++ b/client/src/app/core/register/register.component.html
@@ -23,6 +23,21 @@
         <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
 
+      <div class="form-group mb-2">
+        <label class="control-label" style="margin-right: 10px;">Adres:</label>
+        <label class="radio-inline">
+          <input type="radio" name="address" value="set_address" (click)="unsetAddress()" checked> Brak
+        </label>
+        <label class="radio-inline">
+          <input type="radio" name="address" value="unset_address" (click)="setAddress()" class="ms-3"> Dodaj
+        </label>
+      </div>
+
+      <div formGroupName="address" *ngIf="setUserAddress">
+        <gs-text-input formControlName="street" [label]='"Ulica i nr domu/mieszkania"'></gs-text-input>
+        <gs-text-input formControlName="city" [label]='"Miejscowość"'></gs-text-input>
+        <gs-text-input formControlName="province" [label]='"Województwo"'></gs-text-input>
+      </div>
 
       <gs-text-input [formControl]='registerForm.controls["password"]' [label]='"Hasło"' [type]='"password"'></gs-text-input>
       <gs-text-input [formControl]='registerForm.controls["confirmPassword"]' [label]='"Powtórz hasło"'[type]='"password"'></gs-text-input>
